<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_suggestions_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:elevation="4dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

    <TextView
        android:id="@+id/search_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample"
        android:layout_alignParentTop="true"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="17sp"
        android:textColor="#141a1d"
        android:maxWidth="@dimen/search_item_card_max_text_width"/>


    <TextView
        android:id="@+id/search_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_suggestion"
        android:text="@string/category"
        android:textSize="12sp"
        android:maxWidth="@dimen/search_item_card_max_text_width"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/setNavigationPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_near_me_blue_32dp"
        android:layout_gravity="end|center_vertical"
        android:contentDescription="@string/contentDescription_SetNavigation"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_marginEnd="10dp" />
</androidx.cardview.widget.CardView>






