<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_fitToContents = "false"
    app:layout_insetEdge="bottom"
    app:behavior_hideable="true"
    android:background="#f2f2f2"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="#f2f2f2">
            <LinearLayout
                android:id="@+id/hold_building_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/building_image"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    app:srcCompat="@drawable/building_ljacc"
                    android:contentDescription="@string/contentDescription_BuildingImage" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/bottom_sheet_building_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/building"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/bottom_sheet_building_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/address"
            android:textSize="20sp"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/separator_bar"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bottom_sheet_separator"
            android:contentDescription="@string/contentDescription_separator" />

        <!-- this needs to be deleted after -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/bottom_sheet_directions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:drawableStart="@drawable/baseline_near_me_white_36dp"
                android:padding="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/directions"
                android:textColor="#FFFFFF"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/bottom_sheet_floor_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:drawableStart="@android:drawable/ic_dialog_map"
                android:padding="10dp"
                android:text="Indoor Maps"
                android:textColor="#FFFFFF"
                style="?android:attr/borderlessButtonStyle"
                />
        </LinearLayout>


        <TableLayout
            android:id="@+id/bottom_sheet_info_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:shrinkColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/open_hours"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bottom_sheet_open_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/hours_here"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/services"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bottom_sheet_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/services_here"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/departments"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bottom_sheet_departments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/departments_here"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>