...
      <string name="Settings_Feature_Name">Settings</string>
     <string name="Map_Feature_Name">Map</string>
     <string name="Settings">Settings</string>
     <string name="sgw">SGW</string>
     <string name="loy">LOY</string>
     <string name="dash">-</string>
     <string name="directions">Directions</string>
     <string name="contentDescription_BuildingImage">Building Image</string>
     <string name="contentDescription_separator">Separating Building and Additional Information</string>
     <string name="contentDescription_CampusLogo">Campus Compass Logo</string>
     <string name="contentDescription_CampusTitle">Campus Compass Title Name</string>
     <string name="contentDescription_BackButton">Back</string>
     <string name="contentDescription_Navigate">Navigate</string>
     <string name="contentDescription_SetNavigation">SetNavigation</string>
     <string name="contentDescription_CloseButton">The close button</string>
     <string name="contentDescription_MinimizeButton">The minimize button</string>
     <string name="building">Building</string>
     <string name="address">Address</string>
     <string name="open_hours">Open hours:</string>
     <string name="hours_here">Hours here</string>
...
